Mon Jun  4 08:19:57 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/SetConnectorAttributes/Component/SetConnectorAttribute_Component.mpc:
        * connectors/dds4ccm/tests/SetConnectorAttributes/Component/SetConnectorAttribute_Component_exec.h:
        * connectors/dds4ccm/tests/SetConnectorAttributes/Component/SetConnectorAttribute_Component_exec.cpp:
        * connectors/dds4ccm/tests/SetConnectorAttributes/descriptors/Plan.cdp:
          Make this test compiling with opendds, in that case it doesn't really
          test a thing. Removed qos_profile string from cdp, was not used

Mon Jun  4 08:04:30 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/TypeSupport/TypeSupport.mpc:
        * connectors/dds4ccm/tests/TypeSupport/main.cpp:
          Compile this test with opendds, but than it is just doing nothing

Mon Jun  4 07:39:50 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ciao_tests.lst:
          Removed a lot of flags we don't use at all. Also changed the dds4ccm
          test checks, all DDS4CCM tests are now having DDS4CCM as required
          test config. Vendor specific tests can use DDS4CCM_OPENDDS and
          DDS4CCM_NDDS as test configs

Mon Jun  4 06:50:39 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Hello/Sender/Hello_Sender_exec.cpp:
          Added missing newline

        * connectors/dds4ccm/tests/CSLSampleRejected/descriptors/HelloTest_Library.xml:
        * connectors/dds4ccm/tests/CSLUnexpStat/descriptors/CSL_Library.xml:
          Updated location of the xsd

Sun Jun  3 19:23:26 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          DDS4CCM updates

Sun Jun  3 19:09:34 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ciao_tests.lst:
          Removed qos dump test

Sun Jun  3 19:02:08 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
