@@ -95,7 +95,6 @@ project(DDS_DDSInstanceHandleSender_exec) : ciao_executor, dds4ccm_impl {
   includes += ..
   libout = ../lib
   dynamicflags += SENDER_EXEC_BUILD_DLL
-  requires += dds4ccm_ndds
 
   IDL_Files {
   }
@@ -126,7 +125,6 @@ project(DDS_DDSInstanceHandleSender_svnt) : ciao_servant, dds4ccm_lem_stub, dds4
   libout = ../lib
   includes += ..
   dynamicflags += SENDER_SVNT_BUILD_DLL
-  requires += ndds
 
   IDL_Files {
   }
